# Scuffedcraft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Scuffedcraft.dol  tools.lnk
assets/: CreateAssets.sh  README.md
assets/standard-blocks/: 00-Textures.json  00-Textures.py  Main.py
cmake/: DevkitppcToolchain.cmake  WiiToolchain.cmake  ppcToolchain.cmake
cmake/Platform/: Wii.cmake
scripts/: build.sh  common.sh  configure.sh  init-repo.sh  install.sh  run.sh  test-for-toolchain.sh
source/: Collision.c  Collision.h  Main.c  Player.c  Player.h  RenderManager.c  RenderManager.h  make.mk
source/Chunks/: Chunk.c  Chunk.h  ChunkMemoryManagement.c
source/Entities/: Player.c  Player.h
source/Logs/: Log.c  Log.h
source/Physics/: Collision.h
source/Render/: Mesh.c  Mesh.h  Render.c  Render.h  block.c  block.h
source/gfx/: albedo_cube.c  albedo_cube.h  cock.c  cock.h  font.c
